uploaded code snippets