@@ -1,11 +1,15 @@
 import java.io.*;
-public class GetUserInformation {
+
+public class GetUserInfo {
     public static void main(String[] args) throws IOException {
-        Process p = Runtime.getRuntime().exec("getent passwd " + args[0]);
-        BufferedReader input = new BufferedReader(new InputStreamReader(p.getInputStream()));
-        String line;
-        while ((line = input.readLine()) != null) {
-            System.out.println(line);
+        String username = "user1";
+        ProcessBuilder pb = new ProcessBuilder("getent", "passwd", username);
+        Process process = pb.start();
+        InputStream inputStream = process.getInputStream();
+        OutputStream outputStream = new FileOutputStream(new File("username_output.txt"));
+        int read;
+        while ((read = inputStream.read()) != -1) {
+            outputStream.write(read);
         }
     }
 }
