@@ -1,18 +1,20 @@
-import java.util.*;
-public class Main {
-    public static void main(String[] args) throws Exception{
-        Scanner sc = new Scanner(System.in);
-        System.out.print("Please enter a username: ");
-        String username=sc.nextLine();
-        System.out.println("Username is "+username);
-        runCommand("cat /etc/passwd | grep "+username);
-    }
-    public static void runCommand(String command) throws Exception {
-        ProcessBuilder builder = new ProcessBuilder(command);
-        Process process = builder.start();
-        Scanner sc = new Scanner(process.getInputStream());
-        while (sc.hasNext()){
-            System.out.println(sc.nextLine());
-        }
-    }
+import java.lang.*;  
+    public class Test {  
+    public static void main(String[] args) {  
+        String username = args[0];
+         
+        try{  
+            Process p=Runtime.getRuntime().exec("cat /etc/passwd | grep username");  
+            p.waitFor();
+            BufferedReader reader=new BufferedReader(new InputStreamReader(p.getInputStream()));
+             
+            String line=reader.readLine();  
+            while(line!=null){  
+                System.out.println(line);  
+                line=reader.readLine();
+            }
+        } catch(Exception e){  
+            e.printStackTrace();
+        }  
+    }  
 }
