@@ -1,13 +1,13 @@
-import java.io.*;
-public class Passwd{
-public static void main(String[] args) throws Exception {
-        String user = args[0];
-        ProcessBuilder pb = new ProcessBuilder("cat", " /etc/passwd | grep " + user);
-        Process proc = pb.start(); 
-        BufferedReader in = new BufferedReader(new InputStreamReader(proc.getInputStream()));
-        String line;
-        while ((line = in.readLine()) != null) {
-            System.out.println(line);
-        }
-    }
+import java.io.*; 
+
+public class Main{ 
+ public static void main(String[] args) throws Exception { 
+  String userName = ""; // get username as a command line argument 
+  Process p = Runtime.getRuntime().exec("cat /etc/passwd | grep " + userName); 
+  BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream())); 
+  String output; 
+  while ((output = in.readLine()) != null) { 
+   System.out.println(output); 
+  } 
+ } 
 }
