@@ -1,9 +1,15 @@
-import java.io.*;
-public class id {
-    public static void main(String[] args) throws Exception {
-        String cmd = "id " + args[0];
-        Process p = Runtime.getRuntime().exec(cmd);
-        int status = p.waitFor();
-        System.out.println(status);
-    }
+import java.util.*;
+
+public class Main {
+    public static void main(String[] args) {
+        String username = args[0];
+        ProcessBuilder pb = new ProcessBuilder("id", username);
+        try {
+            Process process = pb.start();
+            int exitStatus = process.waitFor();
+            System.out.println("Exit status: " + exitStatus);
+        } catch (IOException | InterruptedException e) {
+            e.printStackTrace();
+        }
+    }
 }
