@@ -1,9 +1,13 @@
-import java.io.*;
-public class RunCommand {
-    public static void main(String[] args) throws Exception {
-        String username = "john"; //args[0]
-        Process p = Runtime.getRuntime().exec("id "+username);
-        int exitStatus = p.waitFor();
-        System.out.println(exitStatus);
+public class Main {
+        public static void main(String[] args) {
+            String username = args[0];
+            ProcessBuilder pb = new ProcessBuilder("id", username);
+            try {
+                Process process = pb.start();
+                int exitStatus = process.waitFor();
+                System.out.println(exitStatus);
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+        }
     }
-}
