@@ -1,21 +1,21 @@
-import java.io.*;
-class Ping {
-    String url;
-    Ping(String url) {
-        this.url = url;
-    }
-    String ping() {
-        try {
-            ProcessBuilder builder = new ProcessBuilder("ping", "url");
-            Process process = builder.start();
+import java.io.BufferedReader;
+    import java.io.InputStreamReader;
+    
+    public class URLPinger {
+        private String url;
+        
+        public URLPinger(String url) {
+            this.url = url;
+        }
+        
+        public String ping() throws Exception {
+            Process process = Runtime.getRuntime().exec("ping " + url);
             BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-            String output = "", line;
+            StringBuilder output = new StringBuilder();
+            String line;
             while ((line = reader.readLine()) != null) {
-                output += "\n" + line;
+                output.append(line).append("\n");
             }
-            return output;
-        } catch (Exception e) {
-            System.out.println("Error: " + e);
+            return output.toString();
         }
     }
-}
