@@ -1,26 +1,22 @@
-import java.io.*;
-
-@WebServlet(urlPatterns = {"/ping"})
-public class PingServlet extends HttpServlet {
-    private String url;
-
-    public void doGet(HttpServletRequest request,
-                      HttpServletResponse response) throws IOException {
-        String pong = ping();
-        PrintWriter out = response.getWriter();
-        if (pong.equals("0"))
-            out.println("Alive");
-        else
-            out.println("Not Alive");
-    }
-
-    public static String ping() {
-        try {
-            Process process = Runtime.getRuntime().exec("ping -c 1 " + url);
-            int status = process.waitFor();
-            return Integer.toString(status);
-        } catch (Exception e) {
-            return e.getMessage();
-        }
-    }
+import java.io.*;
+import java.util.*;
+
+public class Ping {
+    private String url;
+    public void ping(String url) throws IOException, InterruptedException {
+        ProcessBuilder process = new ProcessBuilder();
+        List<String> command = new ArrayList<>();
+        command.add("ping");
+        command.add(url);
+        process.command(command);
+        Process p;
+        int status;
+        p = process.start();
+        status = p.waitFor();
+        String pong = "URL is alive";
+        if (status != 0) {
+            pong = "URL is not alive";
+        }
+        System.out.println(pong);
+    }
 }
