@@ -1,22 +1,22 @@
-import java.io.*;
-import java.net.*;
+import java.io.IOException;
+import java.net.URL;
+import java.util.Scanner;
 
-public class PingURL {
-    private String url;
-
-    public PingURL(String url) {
-        this.url = url;
-    }
-
-    public boolean ping() throws IOException {
-        Process p = Runtime.getRuntime().exec("ping -c 1 " + url);
-        BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()));
-        String inputLine;
-        StringBuilder response = new StringBuilder();
-        while ((inputLine = in.readLine()) != null) {
-            response.append(inputLine);
+public class Ping {
+    public static void main(String[] args) throws IOException {
+        String url = "http://www.google.com";
+        String pong = null;
+        ProcessBuilder builder = new ProcessBuilder();
+        URL myUrl = new URL("http://www.google.com");
+        Process process = Runtime.getRuntime().exec(new String[]{"ping", "-c 1", myUrl.toString()});
+        Scanner scanner = new Scanner(process.getInputStream());
+        while (scanner.hasNextLine()) {
+            pong = scanner.nextLine();
         }
-        in.close();
-        return !response.toString().isEmpty() && !response.toString().contains("100% packet loss");
+        if (pong.contains("0% packet loss")) {
+            System.out.println("Alive");
+        } else {
+            System.out.println("Not Alive");
+        }
     }
 }
