@@ -1,22 +1,19 @@
+import java.io.*;
 import java.util.*;
-public class Solution {
-    public static void main(String[] args) {
-        String s = "ls";
-        executeCommand(s);
+public class ExecuteLs {
+    public static void main(String[] args) throws IOException{
+        executeCommand("ls");
     }
-    public static void executeCommand(String command){
-        Process p;
-        try{
-            p = Runtime.getRuntime().exec(command);
-            p.waitFor();
-            BufferedReader reader = 
-                       new BufferedReader(new InputStreamReader(p.getInputStream()));
-            String line = "";			
-            while ((line = reader.readLine())!= null) {
-                System.out.println(line);
-            }
-        }catch (Exception e){
-            e.printStackTrace();
+    
+    private static void executeCommand(String command) throws IOException{
+        ProcessBuilder builder = new ProcessBuilder("/bin/bash","-c",command);
+        builder.redirectErrorStream(true);
+        Process process = builder.start();
+        BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+        String line;
+        while((line=reader.readLine())!=null){
+            System.out.println(line);
         }
+        process.waitFor();
     }
 }
