@@ -1,12 +1,12 @@
-import java.io.*;
-public class Main {
-    public static void main(String[] args) throws IOException{
-        System.out.println("Hello, World!");
-        Process p = Runtime.getRuntime().exec("ls");
-        BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()));
-        String line;
-        while ((line = in.readLine()) != null) {
-            System.out.println(line);
-        }
-    }
+import java.io.*;
+public class App {
+    public static void main(String[] args) throws IOException {
+        String output = "";
+        ProcessBuilder pb = new ProcessBuilder("ls", "-l");
+        Process p = pb.start();
+        BufferedReader br = new BufferedReader(new InputStreamReader(p.getInputStream()));
+        while ((output = br.readLine()) != null) {
+            System.out.println(output);
+        }
+    }
 }
