@@ -1,14 +1,15 @@
-import java.net.URI;
-import java.net.URISyntaxException;
-
-public class RedirectUrl {
-    public static void main(String[] args) throws URISyntaxException {
-        URI uri = new URI("http://www.example.com");
-        String domainName = uri.getHost();
-        if (domainName == "example.com"){
-            System.out.println(uri);
-        }else {
-            System.out.println("404 Not Found");
+import java.net.*;
+public class Main {
+    public static void main(String args[]){
+        URL url = new URL("https://example.com");
+        redirect_url(url);
+        return;
+    }
+    private static String redirect_url(URL url){
+        URL parsed_url=urlparse(url);
+        if(parsed_url.getHost().equalsIgnoreCase("example.com")){
+            return "https://example.com/";
         }
+        return "404 Not Found";
     }
 }
